syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.nemo.grpcexampleserver";
option java_outer_classname = "ServerProto";

import "server-entity.proto";

package server;

service ExampleService {
    // 普通方式传输
    rpc sayHelloWorld(StringRequest) returns (StringResponse);
}

// 服务端流式传输
service ServerSideStreamService {
    // 服务端流式传输 - 字符串
    rpc serverStreamString(Empty) returns (stream StringResponse);

    // 服务端流式传输 - bytes
    rpc serverStreamBytes(Empty) returns (stream BytesResponse);
}

// 客户端流式传输
service ClientSideStreamService {
    // 客户端流式传输 - 字符串
    rpc clientStreamString(stream StringRequest) returns (StringResponse);

    // 客户端流式传输 - bytes 返回上传文件的保存路径
    rpc clientStreamBytes(stream BytesRequest) returns (StringResponse);

    // 客户端流式传输 - bytes 服务端通过byte数组接收
    rpc clientStreamBytesByte(stream BytesRequest) returns (StringResponse);

    // 客户端流式传输 - 服务端抛异常
    rpc clientStreamThrowException(stream StringRequest) returns (StringResponse);
}

// 双向流式传输
service BidirectionalStreamService {
    // 双向流式传输 - 字符串
    rpc bidirectionalStreamString(stream StringRequest) returns (stream StringResponse);
}
